--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,6 +46,18 @@ code {
   width: 48px;
   content:url("http://lorempixel.com/48/48");
 }
+
+.col-md-9 img {
+  float: left;
+  height: 48px;
+  width: 48px;
+  margin: 0px 25px;
+}
+
+#tweettext {
+  margin: 25px;
+}
+
 .content {
   margin-left: 60px;
 }
