--- a/views/index.html
+++ b/views/index.html
@@ -16,10 +16,11 @@
     <div class="col-md-9">
     
     <!-- post new tweet -->
-    {% if showForm %}
+    {% if showForm  %}
       <form action="/tweets" method="POST">
         <label for="name_field">Name:</label>
         <input name="name" type="text" id="name_field" placeholder=" what is your name?" />
+
         <label for="text_field">Text:</label>
         <input name="text" type="text" id="text_field" placeholder=" what is your quest?" style="width: 350px;" />
 
@@ -28,16 +29,28 @@
       <hr>
     {% endif %}
 
+    {% if searchedName %}
+          <form action="/tweets" method="POST">
+          <label for="name_field">Name:</label>
+          <input name="name" type="text" id="name_field" value="{{searchedName}}"/>
+
+          <label for="text_field">Text:</label>
+          <input name="text" type="text" id="text_field" placeholder=" what is your quest?" style="width: 350px;" />
+        <input type="submit" value="Submit" />
+        </form>
+      <hr>
+    {% endif %}
+
+    <div id="tweetList">
       <!-- display tweets here -->
       {% for tweet in tweets %}
-        
-        <strong><p>{{tweet.name}}</p></strong>
         <img src="/gracehopper.jpg"/>
+        <p><a href="/users/{{tweet.name}}">{{tweet.name}}</a></p>
         <p id="tweettext">{{tweet.content}}</p>
         <hr>
 
-
       {% endfor %}
+    </div>
       
     </div>
   </div>
